LC/tests/test23.c.out
{s:14, 3, 4, 11, 12, 13, 14, 21, 22, 23, 24, 31, 32, 33, 34}
ERROR: instruction at line 6 attempted to use position 4 in the dimension 1 of a tensor that only has 4 elements in that dimension
